tests/suite/errors/e46_empty_bin_literal.rs
// err: expected binary digits after '0b'

fn main() {
    let _x = 0b;
}
